implement CaptureBoard and LifeFormRader component

--- a/src/App.scss
+++ b/src/App.scss
@@ -55,7 +55,7 @@ h1 {
 .rader-pixel-dot {
   width: 25px;
   height: 25px;
-  border: solid 1px red;
+  border: solid 1px black;
 }
 
 // Font Styling
