implement ContainerWrapper and apply to LifeFormRader and GameDisplay

--- a/src/App.scss
+++ b/src/App.scss
@@ -51,6 +51,10 @@ $reset-shadow-color:  #8C2022;
   background-color: black;
 }
 
+.pixel-green {
+  background-color: #689F38;
+}
+
 // Life Form Rader
 .rader-pixel-dot {
   width: 25px;
