--- a/src/App.scss
+++ b/src/App.scss
@@ -63,6 +63,10 @@ $reset-shadow-color:  #8C2022;
   font-style: normal;
 }
 
+.score-font {
+  margin-top: 20;
+}
+
 // Button Styling
 
 .eightbit-btn {
