--- a/src/App.scss
+++ b/src/App.scss
@@ -1,18 +1,21 @@
 $outline-width: 6px;
 $shadow-width: 4px;
 
-$button-background: #92CD41;
+$button-background: #92cd41;
 $sec-button-background: #76c442;
-$shadow-color:  #4AA52E;
+$shadow-color: #4aa52e;
 
-$alt-button-background: #F7D51D;
-$alt-sec-button-background: #F2C409;
-$alt-shadow-color:  #E59400;
+$alt-button-background: #f7d51d;
+$alt-sec-button-background: #f2c409;
+$alt-shadow-color: #e59400;
 
-$reset-button-background: #E76E55;
-$reset-sec-button-background: #CE372B;
-$reset-shadow-color:  #8C2022;
+$reset-button-background: #e76e55;
+$reset-sec-button-background: #ce372b;
+$reset-shadow-color: #8c2022;
 
+body {
+  background-color: #fdfbd4;
+}
 
 .App {
   margin: 0;
@@ -47,82 +50,83 @@ li {
   text-align: center;
   font-size: 30px;
   padding: 20px;
-  font-family: 'Press Start 2P', cursive;
-  text-decoration: none; 
-  color: #FFFAFA;
+  font-family: "Press Start 2P", cursive;
+  text-decoration: none;
+  color: #fffafa;
   box-shadow: inset (-$shadow-width) (-$shadow-width) 0px 0px $shadow-color;
   cursor: pointer;
 
   &:hover,
   &:focus {
-      background: $sec-button-background;
-      box-shadow: inset (-$shadow-width*1.5) (-$shadow-width*1.5) 0px 0px $shadow-color;
+    background: $sec-button-background;
+    box-shadow: inset (-$shadow-width * 1.5) (-$shadow-width * 1.5) 0px 0px
+      $shadow-color;
   }
 
   &:active {
-      box-shadow: inset $shadow-width $shadow-width 0px 0px $shadow-color;
+    box-shadow: inset $shadow-width $shadow-width 0px 0px $shadow-color;
   }
 
   &:before,
   &:after {
-  content: '';
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      box-sizing: content-box;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    box-sizing: content-box;
   }
 
   &:before {
-      top: -$outline-width;
-      left: 0;
-      border-top: $outline-width black solid;
-      border-bottom: $outline-width black solid;
+    top: -$outline-width;
+    left: 0;
+    border-top: $outline-width black solid;
+    border-bottom: $outline-width black solid;
   }
 
   &:after {
-      left: -$outline-width;
-      top: 0;
-      border-left: $outline-width black solid;
-      border-right: $outline-width black solid;
+    left: -$outline-width;
+    top: 0;
+    border-left: $outline-width black solid;
+    border-right: $outline-width black solid;
   }
 
   &--reset {
-      background: $reset-button-background;
-      box-shadow: inset (-$shadow-width) (-$shadow-width) 0px 0px $reset-shadow-color;
+    background: $reset-button-background;
+    box-shadow: inset (-$shadow-width) (-$shadow-width) 0px 0px
+      $reset-shadow-color;
 
-      &:hover,
-      &:focus {
-          background: $reset-sec-button-background;
-          box-shadow: inset (-$shadow-width*1.5) (-$shadow-width*1.5) 0px 0px $reset-shadow-color;
-      }
+    &:hover,
+    &:focus {
+      background: $reset-sec-button-background;
+      box-shadow: inset (-$shadow-width * 1.5) (-$shadow-width * 1.5) 0px 0px
+        $reset-shadow-color;
+    }
 
-      &:active {
-          box-shadow: inset $shadow-width $shadow-width 0px 0px $reset-shadow-color;
-      }
-
+    &:active {
+      box-shadow: inset $shadow-width $shadow-width 0px 0px $reset-shadow-color;
+    }
   }
 
   &--random {
-      background: $alt-button-background;
-      box-shadow: inset (-$shadow-width) (-$shadow-width) 0px 0px $alt-shadow-color;
+    background: $alt-button-background;
+    box-shadow: inset (-$shadow-width) (-$shadow-width) 0px 0px
+      $alt-shadow-color;
 
-      &:hover,
-      &:focus {
-          background: $alt-sec-button-background;
-          box-shadow: inset (-$shadow-width*1.5) (-$shadow-width*1.5) 0px 0px $alt-shadow-color;
-      }
+    &:hover,
+    &:focus {
+      background: $alt-sec-button-background;
+      box-shadow: inset (-$shadow-width * 1.5) (-$shadow-width * 1.5) 0px 0px
+        $alt-shadow-color;
+    }
 
-      &:active {
-          box-shadow: inset $shadow-width $shadow-width 0px 0px $alt-shadow-color;
-      }
-
+    &:active {
+      box-shadow: inset $shadow-width $shadow-width 0px 0px $alt-shadow-color;
+    }
   }
 }
 
 //////////////////////////////////////Grid Square Styling/////////////////////////////////
 .display-pixel-dot {
-  width: 20px;
-  height: 20px;
   border: solid 1px gray;
   caret-color: transparent;
 }
@@ -133,18 +137,16 @@ li {
 }
 
 .pixel-white {
-  background-color: #FFFAFA;
+  background-color: #fffafa;
   caret-color: transparent;
 }
 
 .pixel-green {
-  background-color: #689F38;
+  background-color: #689f38;
   caret-color: transparent;
 }
 
 .rader-pixel-dot {
-  width: 25px;
-  height: 25px;
   border: solid 1px black;
   caret-color: transparent;
 }
@@ -173,7 +175,7 @@ li {
   font-weight: 900;
   margin-top: 10px;
   margin-bottom: 20px;
-  color: #FFFAFA;
+  color: #fffafa;
 }
 
 .diff-container {
@@ -197,7 +199,6 @@ li {
   font-style: normal;
   font-size: 50px;
   line-height: 1.5;
-
 }
 
 .fade-text {
@@ -227,7 +228,7 @@ li {
   width: 100vw;
   height: 100vh;
   text-align: center;
-  background-color: #FDFBD4;
+  background-color: #fdfbd4;
   opacity: 0;
   transition: opacity 1s ease-in-out;
 }
@@ -279,15 +280,11 @@ li {
 
 @keyframes fall {
   0% {
-      top: -10%;
-      opacity: 1;
+    top: -10%;
+    opacity: 1;
   }
   100% {
-      top: 110%;
-      opacity: 0;
+    top: 110%;
+    opacity: 0;
   }
 }
-
-
-
-
